Fixed broken layout on docs page from BS5
I should get around to actually finishing the docs soon now that I've finished the 5.0.0 changes

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,5 +1,6 @@
-        .jumbotron {
+        #hero {
             background-color: #7952b3;
+            margin-bottom: 2rem;
         }
 
         /* Codye classes */
